# safco-dental-scraper

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
output/: dental-exam-gloves.json  products.csv  products.json  sutures-&-surgical-products.json
src/: models.py  orchestrator.py  rate_limiter.py  retry.py  storage.py  utils.py
src/agents/: classifier.py  extractor.py  navigator.py  validator.py
tests/: conftest.py  test_extractor.py  test_models.py  test_storage.py  test_validator.py
